# pytch-microbit

./: .gitignore  LICENSE.md  README.md  eslint.config.mjs  microbit_v1.py  microbit_v2.py  package-lock.json  package.json  pytch.py  tsconfig.json  universal.py
doc/: README-developing-docs.md  pyproject.toml
doc/source/: conf.py  index.rst
doc/source/developer/: development.rst  index.rst  overview.rst  protocol.rst
doc/source/user/: index.rst  setup.rst  troubleshooting.rst  usage.rst
src/: build.ts  flash.ts  shared.ts
website-layer/: make.sh
